add content and fix typos

--- a/The Problem at Cal Poly.html
+++ b/The Problem at Cal Poly.html
@@ -26,7 +26,7 @@
 			<img src="assets/CM.jpg">
 			<p class=imgfigure>Fig. 1 <a href="https://ssgse.com/">ssgse.com</a> "Cal Poly Campus Market" 2019</p>
 			</div>
-		</div>
+			<!----</div>---------->
 		<p>
 		Most unhealthy food on campus is based upon the food being fried adding more greases to a meal. Overall research proves that Higher level education facilities attendents are overweight. Although young adults classified as ages 18-35 overall tend to increase in unhealthier BMI's, University students especially have a visible impact upon. Fresh Produce is available in the local Campus Market but prices make it unlikely that students are willing to purchase enough for a good diet. 
 		</p>
@@ -42,7 +42,7 @@
 			</div>
 		<p>
 		Cal Poly does offer some healthier options in terms of dedicated shops that are more healthier like the campus market. The market offers many healthy options for students who are looking to have a healthy diet. However most of the food at the Campus Market and most similar places sell their foods at generally higher prices than similar establishments. For first year students a meal plan must be purchased for students to be able to purchase food around Campus and is not a option to opt out.
-		Meals plans are designed for students to be able to have enough money just for food at values increasing for the type of meal plan a student purchases. The problem is that rising prices of foods on Campus leads to food insecurity and unbalanced diets with students often not being able to purchase enough food to sustain a good diet and often skipping meals due to not enough money or not having time. The prices compared to a local vons[Figure 1] show how much of a difference there is in pricing compared to the Campus Market here at Cal Poly. 
+		Meals plans are designed for students to be able to have enough money just for food at values increasing for the type of meal plan a student purchases. The problem is that rising prices of foods on Campus leads to food insecurity and unbalanced diets with students often not being able to purchase enough food to sustain a good diet and often skipping meals due to not enough money or not having time. The prices compared to a local vons[Figure 2] show how much of a difference there is in pricing compared to the Campus Market here at Cal Poly. 
 		Prices being double of what is available outside of Campus show how much of a flaw there is in the current dining system with students having to spend money on meal plans with misguiding values when in reality it seems like more of a cash grab by the dining system. </p>
 
 			</div>
@@ -53,23 +53,27 @@
 		<p>
 		College students diets can be generalized in terms of there food choices with them being most effected by price and time. Most students do not have the time to make their own meals which are linked to a quality-diet<a href="./works cited.html#Rajshri">[3]</a> as a person usually hand picks their ingredients leading to more awareness of their health and not using industrial practices which make away from home meals more heavy on calories<a href="./works cited.html#Thorpe">[11]</a>.
 		 </p>
-		 <div class=vsplit>
-		 <div>
 		 <p>
 		 Students do not have the time for prepping their own meals because most of the time they are preoccupied with meeting assignment and project deadlines along with other student responsibilites.
 		 </p>
+		 <div class=vsplit>
+		 <div>
 		 <p>
 		 With Cal Poly being the main provider of fresh produce and healthier options like the Campus Market, It having higher prices than other local dining options leads to many students to opt for cheaper alternatives like fast food places which are franchised so prices are much cheaper for a meal. When students are led to look for these alternatives places many end up purchasing larger portion sizes which are usually cheaper because of the physiological or cognitive mechanisms that fast food places have set in to place to make customers buy more from them. For example, It has been shown that over the life which fast food places have been established serving sizes have increased sharply. Coca Cola for example has seen a 250% increase in portion sizes from 1950 with it first starting from a 6.5oz single serving soft drink to today where a single serving is 20oz.  Larger portions usually costing less also effects how fast-food consumers make decisions with them choosing a larger portion to get a better value without often thinking of the increased calories that come with a larger portion serving<a href="./works cited.html#Simone">[1]</a>
 		 </p>
-		 <p>
-		 This leads students with no other option than grabbing a prepackaged meal or fast food options which are the quickest ways to grab a meal.  This leads to the other factor of pricing because college students generally do not have much cash on them due to them having to pay for their tuition and other college related expense like housing and materials. This leaves usually a fixed budget in terms of meals through the universities dining plan; For example cal poly has a meal plans which distribute dining dollars at a certain rate. This budget for most students leads to them having to choose more options which give them more value which are often fast food places with higher portion sizes due to the value of franchised establishments compared to cal polys Campus Market. 
-			</p>
 			</div>
 			<div>
-			<img src=assets/20vtdy.jpg> 
+			<img src=assets/20vtdy.jpg > 
 			<p class=imgfigure>Fig. 3 <a href=https://www.yourweightmatters.org/portion-sizes-changed-time/>yourweightmatters.org</a> "How Portion Sizes Have Changed Over Time" 2016</p>
 			</div>
 		</div>
+		<div style="width:95%;">
+		 <img src="assets/dineplanincrease.png" style="width:100%;height:auto;">
+		 <p class="imgfigure"> Fig. 4</p>
+		 </div>
+		 <p>
+		 This leads students with no other option than grabbing a prepackaged meal or fast food options which are the quickest ways to grab a meal.  This leads to the other factor of pricing because college students generally do not have much cash on them due to them having to pay for their tuition and other college related expense like housing and materials. This leaves usually a fixed budget in terms of meals through the universities dining plan; For example cal poly has a meal plans which distribute dining dollars at a certain rate. This budget for most students leads to them having to choose more options which give them more value which are often fast food places with higher portion sizes due to the value of franchised establishments compared to cal polys Campus Market. Cal Polys meal plans are also know to have the highest prices compared to other CSU's with prices rapidly rising over the years as seen by figure 4. These increases over the years could also be a factor in prices at Cal Poly being much higher compared to stores outside campus at markets with Cal Poly raising its prices with the increase in meal plans to give students less value. 
+			</p>
 		<h2>Dietary Quality effects On Academics</h2>
 
 		<div class="vsplit_graph">
@@ -116,7 +120,7 @@
 		</tbody>
 		</table>
 			<p class=imgfigure>
-			Fig. 4 <a href="./works cited.html#Whatnall">doi.org/10.1111/jhn.12632</a> "Higher Diet Quality in University Students Is Associated with Higher Academic Achievement: A Cross-Sectional Study." 2019
+			Fig. 5 <a href="./works cited.html#Whatnall">doi.org/10.1111/jhn.12632</a> "Higher Diet Quality in University Students Is Associated with Higher Academic Achievement: A Cross-Sectional Study." 2019
 			</p>
 			<table>
 			<caption>Food Group Pricing</caption>
@@ -154,7 +158,7 @@
 			</tr>
 			</table>
 			<p class=imgfigure>
-			Fig. 5 <a href="./works cited.html#Bolarić">hrcak.srce.hr/113677</a> "The relation between food price, energy density and diet quality." 2013
+			Fig. 6 <a href="./works cited.html#Bolarić">hrcak.srce.hr/113677</a> "The relation between food price, energy density and diet quality." 2013
 			</p>
 			</div>
 
