--- a/works cited.html
+++ b/works cited.html
@@ -15,7 +15,6 @@
 		</nav>
 	</header>
 	<main class=essay_proposal>
-	<img src="./assets/Fruits.jpg">
 		<h1 class=essay_title>Works Cited</h1>
 		<p id="Simone" class="citation">
 		Simone A. French, Pricing Effects on Food Choices, The Journal of Nutrition, Volume 133, Issue 3, 2003, Pages 841S-843S, ISSN 0022-3166, https://doi.org/10.1093/jn/133.3.841S. (https://www.sciencedirect.com/science/article/pii/S0022316622156932)
@@ -26,27 +25,30 @@
 		</p>
 		<p id="Martinez" class="citation">Martinez, Suzanna M., et al. “No Food for Thought: Food Insecurity Is Related to Poor Mental Health and Lower Academic Performance among Students in California’s Public University System.” Journal of Health Psychology, vol. 25, no. 12, June 2018, p. 135910531878302, https://doi.org/10.1177/1359105318783028.
 		</p>
-		<!-- 7-->
 		<p id="Burrows" class="citation">Burrows, Tracy L et al. “Associations between Dietary Intake and Academic Achievement in College Students: A Systematic Review.” Healthcare (Basel, Switzerland) vol. 5,4 60. 25 Sep. 2017, doi:10.3390/healthcare5040060
 		</p>
 		<p id="Zhang" class="citation">Zhang, Ying. “Impact of Dietary Habit Changes on College Students Physical Health Insights from a Comprehensive Study.” Scientific Reports, vol. 15, no. 1, Nature Portfolio, Mar. 2025, https://doi.org/10.1038/s41598-025-94439-7.
 		</p>
 		<p id="Bruening" class="citation">Bruening, Meg, and Melissa Laska. “Position of the Society for Nutrition Education and Behavior: Food and Nutrition Insecurity among College Students.” Journal of Nutrition Education and Behavior, vol. 55, no. 10, Aug. 2023, https://doi.org/10.1016/j.jneb.2023.07.005.
 		</p>
+		<!-- 7-->
 		<p id="Wolfson" class="citation">Wolfson, Julia A et al. “The effect of food insecurity during college on graduation and type of degree attained: evidence from a nationally representative longitudinal survey.” Public health nutrition vol. 25,2 (2022): 389-397. doi:10.1017/S1368980021003104
 		</p>
 		<p id="Landry" class="citation">Landry, Matthew J., et al. “Food Insecurity on College and University Campuses: A Context and Rationale for Solutions.” Journal of the Academy of Nutrition and Dietetics, vol. 122, no. 3, Oct. 2021, https://doi.org/10.1016/j.jand.2021.10.021.
 		</p>
 		<p id="Budnick" class="citation">Budnick, Steven et al. “A Cross-Sectional Analysis of College Students' Diet, Mental Health, and Hindrances to Healthy Lifestyles.” American journal of lifestyle medicine, 15598276251315347. 4 Feb. 2025, doi:10.1177/15598276251315347
-		<!--12-->
 		<p id="Thorpe" class="citation">
 		(M.G. Thorpe, M. Kestin, L.J. Riddell, R.S. Keast, S.A. McNaughton	Diet quality in young adults and its association with food-related behaviours Public Health Nutr, 17 (2014), pp. 1767-1775)
 </p>
 	<p id="Whatnall" class="citation">
 								  Whatnall, M C, et al. “Higher Diet Quality in University Students Is Associated with Higher Academic Achievement: A Cross-Sectional Study.” Journal of Human Nutrition and Dietetics : The Official Journal of the British Dietetic Association, vol. 32, no. 3, 2019, pp. 321–328, www.ncbi.nlm.nih.gov/pubmed/30810252, https://doi.org/10.1111/jhn.12632.
 								  </p>
+		<!--12-->
 								  <p id="Bolarić" class="citation">																					  Bolarić, Margareta and Zvonimir Šatalić. "The relation between food price, energy density and diet quality." Croatian journal of food science and technology, vol. 5, no. 2, 2013, pp. 39-45. https://hrcak.srce.hr/113677. Accessed 24 Nov. 2025.
 								  </p>
+		<p id="Hyman" class=citation>
+		Hyman, M. (2025, October 17). How Much Junk Food In Calories Do Americans Eat? Caloriehealthy. Retrieved December 2, 2025, from https://caloriehealthy.com/how-much-junk-food-in-calories-do-americans-eat.html
+		</p>
 
 
 	</main>
