--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<link rel=stylesheet href="styles.css" />
 	<title>Environment of Food Proposol</title>
+	<link rel="icon" href="./assets/portal_logo_195x47.svg"/ >
 </head>
 <body>
 	<header>
