add icon to all pages

--- a/The Solution.html
+++ b/The Solution.html
@@ -1,8 +1,8 @@
 
 <!DOCTYPE HTML>
-<!---f --->
 <head>
 	<link rel=stylesheet href="styles.css" />
+	<link rel="icon" href="./assets/portal_logo_195x47.svg"/ >
 	<title>Environment of Food Proposol</title>
 </head>
 <body>
