--- a/The Solution.html
+++ b/The Solution.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <head>
 	<link rel=stylesheet href="styles.css" />
-	<link rel="icon" href="./assets/portal_logo_195x47.svg"/ >
+	<link rel="icon" href="./assets/favicon.ico"/ >
 	<title>Environment of Food Proposol</title>
 </head>
 <body>
