--- a/works cited.html
+++ b/works cited.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 	<link rel=stylesheet href="styles.css" />
-	<link rel="icon" href="./assets/portal_logo_195x47.svg"/ >
+	<link rel="icon" href="./assets/favicon.ico"/ >
 	<title>Environment of Food Proposol</title>
 </head>
 <body>
