feat: add footer word count and works cited link

--- a/The Problem at Cal Poly.html
+++ b/The Problem at Cal Poly.html
@@ -176,7 +176,11 @@
 			</div>
 			</div>
 			</main>
-<footer>
+<footer style="background-color:#333;width:100%;display:flex;justify-content:center;color:white;">
+<ul style="flex-direction:row;display:flex;list-style-type:none;gap:20px;">
+	<li>Word Count: 1701</li>
+	<li><a href="./works cited.html">Works Cited</a></li>
+	</ul>
 </footer>
 </body>
 
