--- a/The Solution.html
+++ b/The Solution.html
@@ -42,8 +42,11 @@
 		Whether you are a student, staff, parent, or a supporter for student success, The California Public University System needs to change to foster healthier environments for students creating life long healthy food habits. In todays current system students are exposed to unhealthy environments promoting a habit of bad food decisions. Pricing does not help in mitigating this effect with universities like Cal Poly raising prices in their markets. What we propose is to lower prices as this would counteract students being more willing to buy cheaper but less nutrituous food. Lowering prices and subsidization of stores on campus for select itmes would make healthier options more competitive for the students market.
 		</p>
 	</main>
-</body>
-<footer style="background-color:black;width:100%;">
-2025
+<footer style="background-color:#333;width:100%;display:flex;justify-content:center;color:white;">
+<ul style="flex-direction:row;display:flex;list-style-type:none;gap:20px;">
+	<li>Word Count: 818</li>
+	<li><a href="./works cited.html">Works Cited</a></li>
+	</ul>
 </footer>
+</body>
 
