--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-	<link rel=stylesheet href="styles.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<title>Environment of Food Proposol</title>
 	<link rel="icon" href="./assets/favicon.ico"/ >
 </head>
@@ -30,7 +30,11 @@
 		Cal Poly would be well served by learning from the examples of some of the standout college campuses across the US that have high-rated dining programs. The dining halls in these schools often feature various authentic cuisines offered at premium-style restaurants. These restaurants are no different than any business off-campus—with established tradition, unique style, and high critical praise for their food. Campus dining at SLO should monitor the quality of their restaurants with the same level of scrutiny, to the point where the general public would enjoy dining at one of them. More proven ways to increase the healthiness and accessibility of the food at Cal Poly include expanding food assistance programs, increasing education on the topic of food literacy, and expanding the size of the food pantry and grocery stores.
 		</p>
 	</main>
-</body>
-<footer>
+<footer style="background-color:#333;width:100%;display:flex;justify-content:center;color:white;">
+<ul style="flex-direction:row;display:flex;list-style-type:none;gap:20px;">
+	<li>Word Count: 484</li>
+	<li><a href="./works cited.html">Works Cited</a></li>
+	</ul>
 </footer>
+</body>
 
