--- a/works cited.html
+++ b/works cited.html
@@ -53,4 +53,12 @@
 
 
 	</main>
+
+<footer> 
+<ul> 
+	<li>Word Count: 484</li>
+	<li><a href="./works cited.html">Works Cited</a></li>
+	</ul>
+</footer>
+	</footer>
 </body>
