fix: typos and clarity

--- a/The Problem at Cal Poly.html
+++ b/The Problem at Cal Poly.html
@@ -21,7 +21,7 @@
 		<p>You have probably heard from staff and students around the Cal Poly talk about the food and dining options being limited and not very fresh. When you generally hear something often being talked down upon in high frequency there is probably some level of truth to the topic. In the case of dining options at Cal Poly, it is true that most of the food options are not very diverse in terms of types of foods.
 		</p>
 		<h2>Unhealthy environments</h2>
-		<p> There are lots of places to eat out from at Cal Poly with there being four main dining halls located across campus and several locations to get food from spread out between the halls. Several of the locations offer healthy options and dishes. However with most of the food establishments being based upon fast food, The inclination to buy something that is healthier when going to a fast food place is outweighed by the more unhealthier options. Even if student opt to head to dining halls with healthy intentions, the availability and locality of more unhealthier food makes impulse purchasing more likely along with the prices of the food options at Cal Poly.
+		<p> There are lots of places to eat out from at Cal Poly with there being four main dining halls located across campus and several locations to get food from spread out between the halls. Several of the locations offer healthy options and dishes. However with most of the food establishments being based upon fast food, The inclination to buy something that is healthier when going to a fast food place is outweighed by the more unhealthier options. Even if students opt to head to dining halls with healthy intentions, the availability and locality of more unhealthier food makes impulse purchasing more likely along with the prices of the food options at Cal Poly. Affordability is a major reason why students opt to eat high-fat snacks and meals over healthier ones <a href="./works cited.html#Simone">[1]</a> which often already have a disadvantage in the taste factor. A student’s healthy intentions may be difficult to uphold against heavily promoted and highly accessible fast food options, especially considering the average student’s busy workload that leaves less time for nutritional considerations. The dangerous result of this is students’ impulsive fast food purchases—which form bad habits over a long period of time and are an unsuitable substitute for real food
 		</p> 
 			<div style="text-align:center;">
 			<img src="assets/CM.jpg">
@@ -29,11 +29,12 @@
 			</div>
 			<!----</div>---------->
 		<p>
-		Most unhealthy food on campus is based upon the food being fried adding more greases to a meal. Overall research proves that Higher level education facilities attendents are overweight. Although young adults classified as ages 18-35 overall tend to increase in unhealthier BMI's, University students especially have a visible impact upon. Fresh Produce is available in the local Campus Market but prices make it unlikely that students are willing to purchase enough for a good diet. 
+		Most unhealthy food on campus is based upon the food being fried adding more greases to a meal. Overall research proves that Higher level education facilities attendents are overweight. Although young adults classified as ages 18-35 overall tend to increase in unhealthier BMI's, University students especially have a visible impact upon. The dire food situation on campus is made worse by lackluster grocery options. Campus market, for example—one of the school’s main options for produce—has an extremely limited variety of fruits and vegetables while selling at huge markups. 
 		</p>
 		<h2>Academic Pressures leading to making unhealthier diet choices</h2>
 		<p>
-		Most students first arriving at University are experiencing their truly first independenent moments leaving their parents to live on campus. As a result many students without any boundaries to food options spend their first few months endulging themselves to this new freedom. Students however do not always aim to eat unhealthier and are sometimes forced into a diet that is not healthy from pressures like academic life and financial situations. 3 in 5 first year students at a university tend to have a increase in weight by more than 3kg. Academic pressures like a heavy workload and lots of time spent studying for a test lead to students not having enough time to make themselves a meal and simply choose to get fast food because of the convenience of it or to just relieve stress from established food preferences which are familiar to students with impressionable taste buds.
+		Most students first arriving at University are experiencing their truly first independenent moments leaving their parents to live on campus. 
+		As a result, many students may spend their first few months enjoying the newfound freedom in their diet, including overindulging in established and familiar food preferences. which may lead to making unsustainable choices. However, it is worth noting that pressures from academic life and financial situations can also force students to make unhealthy diet choices. This poor nutrition in turn causes pitfalls in GPA, mental health, and sleep quality <a href="./works cited.html#Burrows">[5]</a> resulting in impulsive fast food consumption, creating a vicious cycle.
 		</p>
 		<h2>Economic Equity</h2>
 			<div class=vsplit>
@@ -178,7 +179,7 @@
 			</main>
 <footer style="background-color:#333;width:100%;display:flex;justify-content:center;color:white;">
 <ul style="flex-direction:row;display:flex;list-style-type:none;gap:20px;">
-	<li>Word Count: 1701</li>
+	<li>Word Count: 1756</li>
 	<li><a href="./works cited.html">Works Cited</a></li>
 	</ul>
 </footer>
